JSW Devsb/src/objects/LATF__c.object
<CustomObject>
    <fields>
        <fullName>Area_Manager__c</fullName>
        <label>Area Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Districts__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Districts</label>
        <referenceTo>Districts__c</referenceTo>
        <relationshipLabel>LATF</relationshipLabel>
        <relationshipName>LATF</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mobile_Number__c</fullName>
        <label>Mobile Number</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>State</label>
        <referenceTo>State__c</referenceTo>
        <relationshipLabel>LATF</relationshipLabel>
        <relationshipName>LATF</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>LATF</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Mobile_Number__c</columns>
        <columns>Districts__c</columns>
        <columns>State__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Area_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>LATF Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LATF</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>